# visualgo

./: .buildinfo  .gitignore  How_to_use.html  README.md  adding_data_structure.html  adding_visual_structures.html  data_structures.html  dev.html  extending_visualgo.html  flow_control.html  genindex.html  index.html  linking_data_structure_to_visual_structure.html  modules.html  objects.inv  program_md.html  pyproject.toml  requirements.txt  requirements_dev.txt  script.sh  search.html  searchindex.js  setup.cfg  user.html  user_visu.html  user_writing.html  visualgo_md.html
.doctrees/: How_to_use.doctree  adding_data_structure.doctree  adding_visual_structures.doctree  data_structures.doctree  dev.doctree  environment.pickle  extending_visualgo.doctree  flow_control.doctree  index.doctree  linking_data_structure_to_visual_structure.doctree  modules.doctree  program_md.doctree  user.doctree  user_visu.doctree  user_writing.doctree  visualgo_md.doctree
_modules/: index.html
_sources/: data_structures.rst.txt  flow_control.rst.txt  linking_data_structure_to_visual_structure.md.txt  visualgo_md.md.txt
doc/: How_to_use.md  adding_data_structure.md  conf.py  extending_visualgo.rst  modules.rst  program_md.md  user_visu.md  visualgo_md.md
source/: How_to_use.md  adding_data_structure.md  adding_visual_structures.md  conf.py  data_structures.rst  dev.rst  extending_visualgo.rst  flow_control.rst  getting_started.md  index.rst  modules.rst  user.rst  user_visu.md  user_writing.md  visualgo_md.md
src/: anim_test.py  file.py  main.py  test.py
tests/: test_main.py  (+1 more)
(+55 files in other folders)
