[metadata]
name =  visualgo
description = visualgo
author = Ilyes Bechoual, David Renault, Maximilien Cringiani.
license = None
license_file = None
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = visualgo
install_requires =
    numpy>=1.25
python_requires = >=3.9
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
visualgo = py.typed

[flake8]
max-line-length = 160
